add github reference

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!-- App can be found on github here: https://github.com/michaeldmurray/search-dashboard -->
 <!doctype html>
 <html lang="en">
 <head>
